# atlas

./: .env.example  .gitignore  LICENSE  README.md  TELEMETRY.md  bump.sh  debump.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
crates/atlas-acp/: Cargo.toml
crates/atlas-acp/examples/: smoke.rs
crates/atlas-acp/src/: driver.rs  error.rs  events.rs  lib.rs  registry.rs  schema.rs  spawn.rs
crates/atlas-agentkit/: Cargo.toml
crates/atlas-agentkit/src/: connection.rs  lib.rs  turn.rs
crates/atlas-agents/: Cargo.toml
crates/atlas-agents/src/: actor.rs  apply.rs  backend.rs  connection.rs  error.rs  events.rs  handle.rs  lib.rs  manager.rs  plugin.rs  providers.rs  session.rs  transcript.rs  types.rs  worker.rs
crates/atlas-bus/: Cargo.toml
crates/atlas-bus/src/: bus.rs  lib.rs  middleware.rs
crates/atlas-cersei/: ARCHITECTURE.md  CERSEI_SDK_DOCS.md  Cargo.toml
crates/atlas-cersei/src/: context.rs  cwd_tool.rs  lib.rs  mcp.rs  memory.rs  provider.rs  store.rs
crates/atlas-cersei/src/tools/: ATTRIBUTION.md  bash.rs  coerce.rs  cwd.rs  edit.rs  errors.rs  glob.rs  grep.rs  list.rs  mod.rs  read.rs  replace.rs  skill.rs  truncate.rs  write.rs
crates/atlas-cersei/tests/: read_repo_files.rs  sdk_native_capability.rs  tools_eval.rs  utf8_patch_guard.rs
crates/atlas-codeindex/: Cargo.toml
crates/atlas-codeindex/src/: lib.rs
crates/atlas-embed/: Cargo.toml
crates/atlas-embed/src/: chat.rs  lib.rs
crates/atlas-gitdiff/: Cargo.toml  LICENSE-delta
crates/atlas-gitdiff/src/: engine.rs  lib.rs  parse.rs
crates/atlas-kb-server/: Cargo.toml  build.rs
crates/atlas-kb-server/src/: main.rs
crates/atlas-memory/: Cargo.toml  MIGRATION.md  README.md
crates/atlas-memory/src/: consolidate.rs  docstore.rs  extract.rs  global.rs  lib.rs  manifest.rs  migrate.rs  parity_bench.rs  provider.rs  retrieve.rs  shared_import.rs  store.rs
crates/atlas-review/: Cargo.toml
crates/atlas-review/src/: diff.rs  lib.rs  prompt.rs  provider.rs  report.rs  verdict.rs
crates/atlas-terminal/: Cargo.toml
crates/atlas-terminal/src/: lib.rs
landing/: README.md  atlas.css  index.html  vercel.json.bak
plans/: atlas-agent-stack-zed-parity.md  atlas-cersei-rag-replan.md
scripts/: release-macos.sh  with-posthog-env.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  logging.rs  main.rs  menu.rs
src-tauri/src/auth/: avatar.rs  backoff.rs  config.rs  core.rs  mod.rs  store.rs  tests.rs
src-tauri/src/commands/: acp.rs  agent_memory.rs  agents.rs  analysis.rs  app_state.rs  auth.rs  browser.rs  byok.rs  canvas.rs  cersei.rs  chat.rs  claude.rs  claude_setup.rs  cli.rs  clipboard.rs  codebase_index.rs  compose_prompt.rs  fileindex.rs  fs.rs  git.rs  git_graph.rs  git_ops.rs  git_watcher.rs  gitdiff.rs  github.rs  knowledge.rs  knowledge_export.css  knowledge_export.rs  knowledge_graph_layout.rs  knowledge_links.rs  knowledge_meta.rs  log.rs  mcp.rs  memory_chat.rs  memory_chat_sessions.rs  memory_compile.rs  memory_delta.rs  memory_graph.rs  memory_indexer.rs  memory_inject.rs  (+29 more)
src-tauri/src/state/: app_state.rs  mod.rs
src-tauri/src/telemetry/: mod.rs
src/components/: agent-icons.tsx  agent-mark.tsx  app-context-menu.tsx  atlas-icon.tsx  atlas-loader.tsx  branch-popover.tsx  command-palette.tsx  graph-ruler.tsx  new-tab-palette.tsx  panel-skeleton.tsx  provider-logo.tsx  search-overlay.tsx  status-bar.tsx  titlebar.tsx
src/features/analysis/components/: analysis-panel.tsx  dependency-graph.tsx  explore-panel.tsx
src/features/analysis/stores/: analysis-store.ts
src/features/auth/components/: account-avatar.tsx  account-button.tsx  account-menu.tsx  connect-dialog.tsx
src/features/auth/lib/: auth-api.ts
src/features/auth/stores/: auth-store.ts
src/features/browser/components/: browser-overlay-watcher.tsx  browser-panel.tsx
src/features/browser/stores/: browser-overlay-store.ts
src/features/canvas/components/: ai-group-marker.tsx  ai-input-float.tsx  ai-thread-panel.tsx  canvas-export-toolbar.tsx  canvas-header.tsx  canvas-panel.tsx  canvas-toolbar.tsx  group-frame-node.tsx  media-node.tsx  node-handles.tsx  note-editor-panel.tsx  note-inspector.tsx  note-node.tsx  pages-panel.tsx  shape-node.tsx  text-node.tsx
src/features/canvas/lib/: canvas-ai.ts  canvas-api.ts  canvas-export.ts
src/features/canvas/stores/: canvas-ai-store.ts  canvas-store.ts
src/features/chat/components/: bash-history-panel.tsx  chat-input.tsx  chat-panel.tsx  chat-search-palette.tsx  codex-login-dialog.tsx  commit-flow.tsx  composer-add-menu.tsx  inbox-panel.tsx  mention-picker.tsx  message-input.tsx  message-item.tsx  messages-list.tsx  permission-modal.tsx  plan-dock.tsx  plans-panel.tsx  provider-model-pills.tsx  retry-pill.tsx  session-sidebar.tsx  slash-command-picker.tsx  streaming-markdown.tsx  task-sidebar.tsx  turn-summary-card.tsx
src/features/chat/hooks/: use-composer-file-drop.ts
src/features/chat/lib/: acp-api.ts  acp-models-cache.ts  acp-modes-cache.ts  agents-api.ts  atlas-context.ts  byok-resolve.ts  cersei-model-pref.ts  chat-api.ts  claude-api.ts  load-tokens.ts  (+16 more)
src/features/editor-notion/: tiptap.css
src/features/github/: types.ts
src/features/layout/: templates.ts
src/features/mission-control/: types.ts
src/features/organisations/: types.ts
src/features/telemetry/: error-boundary.tsx  error-handlers.ts  posthog-client.ts
src/features/theme/: accents.ts  apply-app-accent.ts  apply-atlas-theme.ts  themes.ts
src/hooks/: use-fullscreen.ts  use-hotkey.ts
src/lib/: constants.ts  create-selectors.ts  env.ts  file-types.ts  graph-layout.ts  input-activity.ts  markdown-blocks.ts  markdown-cache.tsx  markdown-render.ts  markdown.tsx  markdown.worker.ts  open-file.ts  safe-unlisten.ts  time-ago.ts
src/styles/: diff-syntax.css  globals.css  tokens.css
src/types/: acp.ts  agent.ts  agents.ts
src/ui/: context-menu.tsx  kbd.tsx  scroll-area.tsx  secret-input.tsx
(+266 files in other folders)
