[package]
name = "atlas"
version = "0.1.0"
edition = "2021"

[lib]
name = "atlas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Devtools intentionally NOT enabled here. Release builds ship without
# right-click → Inspect Element / Cmd+Option+I; `tauri dev` still auto-
# enables devtools because the Tauri runtime turns them on for debug
# builds regardless of this feature. Add `devtools` back here only if you
# need to debug a production-only issue and accept the binary-size and
# attack-surface cost.
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-window-state = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
atlas-agents = { path = "../crates/atlas-agents" }
atlas-terminal = { path = "../crates/atlas-terminal" }
atlas-acp = { path = "../crates/atlas-acp" }
dirs = "6"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
ignore = "0.4"
notify = "8"
notify-debouncer-full = "0.6"
nucleo-matcher = "0.3"
parking_lot = "0.12"
