[package]
name = "atlas"
version = "0.1.7"
edition = "2021"

[lib]
name = "atlas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Devtools intentionally NOT enabled here. Release builds ship without
# right-click → Inspect Element / Cmd+Option+I; `tauri dev` still auto-
# enables devtools because the Tauri runtime turns them on for debug
# builds regardless of this feature. Add `devtools` back here only if you
# need to debug a production-only issue and accept the binary-size and
# attack-surface cost.
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
# Plugin selection — only what JS actually invokes is kept. The Atlas
# Rust command surface does all its own fs/shell/http work via the std,
# reqwest, etc. directly; the JS side only touches: `dialog` (Open
# Folder), `opener` (external links), and `window-state` (persists size
# + position automatically). Dropping the others (fs/shell/clipboard-
# manager/process/os/http) shaves binary size + dyld load time on cold
# launches and removes their permissions surface.
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
atlas-agents = { path = "../crates/atlas-agents" }
atlas-terminal = { path = "../crates/atlas-terminal" }
atlas-acp = { path = "../crates/atlas-acp" }
dirs = "6"
# `rustls-tls` (not `native-tls`) + bundled `webpki-roots`. The macOS
# Security.framework / Keychain code path that `native-tls` uses can fail
# silently in sandboxed Hardened-Runtime release builds even with
# `com.apple.security.network.client` set — symptom: every reqwest call
# returns a TLS handshake error in `.app` form while working fine under
# `tauri dev`. rustls is self-contained: no OS keychain, no surprises.
#
# `gzip` + `brotli` so arXiv / Semantic Scholar responses (often
# gzip-encoded) decode transparently.
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "charset",
    "http2",
    "rustls-tls",
    "gzip",
    "brotli",
] }
futures = "0.3"
ignore = "0.4"
notify = "8"
notify-debouncer-full = "0.6"
nucleo-matcher = "0.3"
parking_lot = "0.12"
# Drop-in replacement for the system allocator. macOS's libmalloc is one of
# the slowest mainstream mallocs for small-object workloads (heavy locking
# per free); mimalloc cuts allocation cost by ~30-60% on Tauri's
# startup-allocation-heavy hot path. `default-features = false` strips
# secure-mode + override hooks we don't need.
mimalloc = { version = "0.1", default-features = false }
# Window vibrancy / NSVisualEffectView wrapper. Used in `lib.rs::run`'s
# setup closure to apply a dark macOS blur material as the window's
# backdrop. Combined with the `macos-private-api` Tauri feature this kills
# the cold-launch white flash by making the WKWebView transparent over a
# blurred dark surface from frame one.
window-vibrancy = "0.6"
# CommonMark + GFM parser used by `commands::knowledge_export` to render
# notes to HTML (single-note export, workspace export, and the standalone
# server crate template).
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }

# Release profile — Atlas previously shipped with Cargo defaults
# (lto = false, codegen-units = 16, no strip), which means the bundled .app
# binary was substantially larger and slower than necessary. Matches the
# profile Athas uses for its 1 s cold launches.
#
# Trade-off: `bun run build:app` link time roughly doubles on clean builds
# (~30 s → ~60–90 s). Dev (`tauri dev`) is unaffected — these are
# release-only settings.
[profile.release]
codegen-units = 1   # Single codegen unit → better cross-function inlining
lto = "thin"        # ThinLTO: most of LTO's win at a fraction of link time
strip = "symbols"   # Smaller .app bundle, faster dyld load
panic = "abort"     # Smaller binary; we don't `catch_unwind` anywhere
opt-level = 3       # Default for release, restated for clarity

# Dev profile — Atlas's own app crate is small (~170 LOC + a handful of
# command modules). Keep it at the default `opt-level = 0` so incremental
# rebuilds stay snappy.
[profile.dev]

# Optimize ALL transitive dependencies in dev mode at `opt-level = 1`
# (Tauri, wry, tao, atlas-acp, atlas-agents, atlas-terminal, tokio, serde,
# reqwest, etc.). First clean build pays a one-time ~3–5 minute cost;
# subsequent rebuilds only recompile the app crate and are unaffected.
# Net effect: `npx tauri dev` startup drops noticeably because Tauri's
# runtime is no longer running unoptimized debug code.
[profile.dev.package."*"]
opt-level = 1
