[package]
name = "atlas"
version = "0.1.18"
edition = "2021"

[lib]
name = "atlas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Devtools intentionally NOT enabled here. Release builds ship without
# right-click → Inspect Element / Cmd+Option+I; `tauri dev` still auto-
# enables devtools because the Tauri runtime turns them on for debug
# builds regardless of this feature. Add `devtools` back here only if you
# need to debug a production-only issue and accept the binary-size and
# attack-surface cost.
# `unstable` enables the multiwebview API (`Window::add_child`) used to embed a
# real WebKit child webview inside the browser tab (see `commands::browser`).
# Pinned to the 2.11.1 already in the lockfile — no new resolution.
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "unstable"] }
# Used to embed KB cover images as `data:` URLs (covers live under the
# hidden `.atlas/` dir, which the asset protocol won't serve). Pinned to the
# version already in the lockfile so no new resolution is pulled in.
base64 = "0.21"
# Plugin selection — only what JS actually invokes is kept. The Atlas
# Rust command surface does all its own fs/shell/http work via the std,
# reqwest, etc. directly; the JS side only touches: `dialog` (Open
# Folder), `opener` (external links), and `window-state` (persists size
# + position automatically). Dropping the others (fs/shell/clipboard-
# manager/process/os/http) shaves binary size + dyld load time on cold
# launches and removes their permissions surface.
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
tauri-plugin-notification = "2"
# Single-instance: forwards the argv of a second `atlas <path>` launch to the
# already-running window so the CLI opens the target folder there instead of
# spawning a duplicate window (or, worse, restoring the last project). See
# `commands::cli` + the callback wired in `run()`.
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Bundled so the Codex history reader (in-process, WAL-concurrent) is
# self-contained and doesn't shell out to the `sqlite3` CLI.
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
atlas-agents = { path = "../crates/atlas-agents" }
atlas-terminal = { path = "../crates/atlas-terminal" }
atlas-acp = { path = "../crates/atlas-acp" }
atlas-embed = { path = "../crates/atlas-embed" }
# Native code-review engine (Cersei-backed). Drives `commands::review`.
atlas-review = { path = "../crates/atlas-review" }
# Deterministic codebase scanner (Cersei tree-sitter). Feeds the Memory-Chat RAG
# with up-to-date source structure. Drives `commands::codebase_index`.
atlas-codeindex = { path = "../crates/atlas-codeindex" }
# Structured side-by-side git diff engine (vendors delta's word-diff). Drives
# `commands::gitdiff` (diff viewer + editor gutter).
atlas-gitdiff = { path = "../crates/atlas-gitdiff" }
dirs = "6"
sha2 = "0.10"
# URL parsing for the embedded browser (`commands::browser`). Already in the
# lockfile transitively via tauri/reqwest; declared here to name the type.
url = "2"
# `rustls-tls` (not `native-tls`) + bundled `webpki-roots`. The macOS
# Security.framework / Keychain code path that `native-tls` uses can fail
# silently in sandboxed Hardened-Runtime release builds even with
# `com.apple.security.network.client` set — symptom: every reqwest call
# returns a TLS handshake error in `.app` form while working fine under
# `tauri dev`. rustls is self-contained: no OS keychain, no surprises.
#
# `gzip` + `brotli` so arXiv / Semantic Scholar responses (often
# gzip-encoded) decode transparently.
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "charset",
    "http2",
    "rustls-tls",
    "gzip",
    "brotli",
    "stream",
] }
futures = "0.3"
ignore = "0.4"
notify = "8"
notify-debouncer-full = "0.6"
nucleo-matcher = "0.3"
parking_lot = "0.12"
# Drop-in replacement for the system allocator. macOS's libmalloc is one of
# the slowest mainstream mallocs for small-object workloads (heavy locking
# per free); mimalloc cuts allocation cost by ~30-60% on Tauri's
# startup-allocation-heavy hot path. `default-features = false` strips
# secure-mode + override hooks we don't need.
mimalloc = { version = "0.1", default-features = false }
# CommonMark + GFM parser used by `commands::knowledge_export` to render
# notes to HTML (single-note export, workspace export, and the standalone
# server crate template).
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
rig-core = "0.38.1"

[target.'cfg(target_os = "macos")'.dependencies]
# Native NSWindow access for the titlebar double-click "zoom" (AppKit
# performZoom:), which Tauri's cross-platform maximize API doesn't cover.
# Already in the tree transitively; pinned here for the direct msg_send.
objc2 = "0.6"
# Turn on atlas-embed's Metal backend so the local memory-chat model runs on the
# Apple-Silicon GPU. Feature is additive over the base path dep in `[dependencies]`.
atlas-embed = { path = "../crates/atlas-embed", features = ["metal"] }

# Release profile — Atlas previously shipped with Cargo defaults
# (lto = false, codegen-units = 16, no strip), which means the bundled .app
# binary was substantially larger and slower than necessary. Matches the
# profile Athas uses for its 1 s cold launches.
#
# Trade-off: `bun run build:app` link time roughly doubles on clean builds
# (~30 s → ~60–90 s). Dev (`tauri dev`) is unaffected — these are
# release-only settings.
[profile.release]
codegen-units = 1   # Single codegen unit → better cross-function inlining
lto = "thin"        # ThinLTO: most of LTO's win at a fraction of link time
strip = "symbols"   # Smaller .app bundle, faster dyld load
panic = "abort"     # Smaller binary; we don't `catch_unwind` anywhere
opt-level = 3       # Default for release, restated for clarity

# Dev profile — Atlas's own app crate is small (~170 LOC + a handful of
# command modules). Keep it at the default `opt-level = 0` so incremental
# rebuilds stay snappy.
[profile.dev]

# Optimize ALL transitive dependencies in dev mode at `opt-level = 1`
# (Tauri, wry, tao, atlas-acp, atlas-agents, atlas-terminal, tokio, serde,
# reqwest, etc.). First clean build pays a one-time ~3–5 minute cost;
# subsequent rebuilds only recompile the app crate and are unaffected.
# Net effect: `npx tauri dev` startup drops noticeably because Tauri's
# runtime is no longer running unoptimized debug code.
[profile.dev.package."*"]
opt-level = 1
