[package]
name = "atlas-acp"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-client-protocol = "0.11"
agent-client-protocol-tokio = "0.11"
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
tracing = "0.1"
dashmap = "6"
