[package]
name = "atlas-acp"
version = "0.1.0"
edition = "2024"

[dependencies]
# Enable every `unstable_*` schema feature — claude-agent-acp's SDK
# emits notifications gated on these (e.g. `usage_update`, `current_model_update`).
# Without them turned on, the strongly-typed `SessionNotification` deserializer
# rejects the unknown variant with a `-32602 Invalid params`, the agent's
# `await client.sessionUpdate(...)` throws, and downstream output (slash
# command bodies, streaming chunks after the rejected one) is dropped on
# the floor. Keep this list in sync with whatever the vendored adapter at
# `third-party/claude-agent-acp/` actually sends.
# ACP 1.x: the `unstable` feature turns on the message-id / model / usage /
# resume / close / fork / logout / additional-directories schema variants the
# claude-agent-acp + codex-acp adapters emit (previously a list of `unstable_*`
# flags on 0.11). The `agent-client-protocol-tokio` helper is gone (never moved
# past 0.11); the stdio transport + client wiring lives in driver.rs now.
agent-client-protocol = { version = "1.2", features = ["unstable"] }
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
dashmap = "6"
