[package]
name = "atlas-agentkit"
version = "0.1.0"
edition = "2021"

[dependencies]
atlas-acp = { path = "../atlas-acp" }
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["sync", "macros", "rt"] }
