[package]
name = "atlas-agents"
version = "0.1.0"
edition = "2021"

[dependencies]
atlas-acp = { path = "../atlas-acp" }
agent-client-protocol = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
parking_lot = "0.12"
tracing = "0.1"
dirs = "6"
