[package]
name = "atlas-agents"
version = "0.1.0"
edition = "2021"

[dependencies]
atlas-acp = { path = "../atlas-acp" }
atlas-cersei = { path = "../atlas-cersei" }
atlas-bus = { path = "../atlas-bus" }
atlas-agentkit = { path = "../atlas-agentkit" }
async-trait = "0.1"
agent-client-protocol = { version = "1.2", features = ["unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
parking_lot = "0.12"
tracing = "0.1"
dirs = "6"

[dev-dependencies]
# `test-util` unlocks tokio's paused-clock helpers (pause/advance) so the
# finalize backstop timer can be tested deterministically without real waits.
tokio = { version = "1", features = ["full", "test-util"] }

[patch.crates-io]
# ATLAS PATCH (Phase 0, plans/atlas-agent-stack-zed-parity.md): incremental
# UTF-8 decoding in the SSE stream decoders — the published crate corrupts
# multi-byte chars split across HTTP chunk boundaries (from_utf8_lossy on raw
# chunks). Guard: cersei_provider::utf8::ATLAS_UTF8_PATCH.
cersei-provider = { path = "../../vendor/cersei-provider" }
# Phase 2: cersei-agent vendored for the tool-cancel race fix — the published
# runner never raced tool.execute() against the cancel token (writes landed
# after Stop) and left orphaned tool_use blocks in provider history on cancel.
# Guard: cersei_agent::ATLAS_CANCEL_PATCH.
cersei-agent = { path = "../../vendor/cersei-agent" }
