[package]
name = "atlas-cersei"
version = "0.1.0"
edition = "2021"
description = "Atlas's native in-process coding agent, built on the Cersei agent SDK."

[lib]
name = "atlas_cersei"

[dependencies]
# Cersei agent SDK — the in-process agentic loop (provider builders, tools,
# permission policies, streaming events). Same pin as atlas-review so the two
# Cersei consumers share one resolved version.
cersei = "0.2.5"
# The agent crate directly, for the built-in `DelegateTool` + delegate batch
# runner (parallel in-process sub-agents) — not re-exported by the `cersei`
# facade. Same pin so Cargo unifies one build.
cersei-agent = "0.2.5"
# RTK (Rust Token Killer) tool-output compression — `CompressionLevel`, not
# re-exported by the `cersei` facade. User-toggleable per session.
cersei-compression = "0.2.5"
# Cooperative cancellation of an in-flight turn (mirrors atlas-review).
tokio-util = "0.7"
# Gitignore-aware recursive walker (ripgrep's own crate) backing the native
# `List` tool — no external `rg`/`grep` binary. Unifies with cersei-tools'
# transitive `ignore` (0.4.26 in the lockfile), so no extra build.
ignore = "0.4"
# Shared identifiers + the EventSink / AcpEvent contract. The native runtime
# adapts Cersei's event stream into the SAME AcpEvent shape the ACP driver
# emits, so atlas-agents' dispatch/state/UI path is reused unchanged.
atlas-acp = { path = "../atlas-acp" }
# Needed to CONSTRUCT the typed ACP schema values (`SessionUpdate`,
# `ToolCallUpdate`, `PermissionOption`) that ride inside `AcpEvent`. Feature set
# mirrors atlas-acp so Cargo unifies to one build and the wire shapes match.
agent-client-protocol = { version = "0.11", features = [
    "unstable_auth_methods",
    "unstable_boolean_config",
    "unstable_logout",
    "unstable_message_id",
    "unstable_session_additional_directories",
    "unstable_session_close",
    "unstable_session_fork",
    "unstable_session_model",
    "unstable_session_resume",
    "unstable_session_usage",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
parking_lot = "0.12"
tracing = "0.1"
async-trait = "0.1"
