[package]
name = "atlas-codeindex"
version = "0.1.0"
edition = "2021"
description = "Deterministic codebase scanner for Atlas: turns live source into structural, embeddable docs via Cersei's tree-sitter code intelligence."

[lib]
name = "atlas_codeindex"

[dependencies]
# Tree-sitter code intelligence (imports + symbols for Rust/TS/JS/Python/Go),
# re-exported by the Cersei umbrella as `cersei::tools::tool_primitives::code_intel`.
# Already compiled for the host via atlas-review, so no new grammar build.
# default-features=false drops the `vms` feature (see atlas-cersei) — all cersei
# consumers must agree due to feature unification.
cersei = { version = "0.2.5", default-features = false }
# gitignore-respecting project walk (same crate the file index uses).
ignore = "0.4"
# Content fingerprints for incremental rebuilds.
sha2 = "0.10"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
