[package]
name = "atlas-codeindex"
version = "0.1.0"
edition = "2021"
description = "Deterministic codebase scanner for Atlas: turns live source into structural, embeddable docs via Cersei's tree-sitter code intelligence."

[lib]
name = "atlas_codeindex"

[dependencies]
# Tree-sitter code intelligence (imports + symbols for Rust/TS/JS/Python/Go),
# re-exported by the Cersei umbrella as `cersei::tools::tool_primitives::code_intel`.
# Already compiled for the host via atlas-review, so no new grammar build.
# default-features=false drops the `vms` feature (see atlas-cersei) — all cersei
# consumers must agree due to feature unification.
cersei = { version = "0.2.6", default-features = false }
# gitignore-respecting project walk (same crate the file index uses).
ignore = "0.4"
# Content fingerprints for incremental rebuilds.
sha2 = "0.10"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[patch.crates-io]
# ATLAS PATCH (Phase 0, plans/atlas-agent-stack-zed-parity.md): incremental
# UTF-8 decoding in the SSE stream decoders — the published crate corrupts
# multi-byte chars split across HTTP chunk boundaries (from_utf8_lossy on raw
# chunks). Guard: cersei_provider::utf8::ATLAS_UTF8_PATCH.
cersei-provider = { path = "../../vendor/cersei-provider" }
# Phase 2: cersei-agent vendored for the tool-cancel race fix — the published
# runner never raced tool.execute() against the cancel token (writes landed
# after Stop) and left orphaned tool_use blocks in provider history on cancel.
# Guard: cersei_agent::ATLAS_CANCEL_PATCH.
cersei-agent = { path = "../../vendor/cersei-agent" }
