[package]
name = "atlas-embed"
version = "0.1.0"
edition = "2021"

[features]
# Compile candle's Metal backend so the quantized chat model can run on the
# Apple-Silicon GPU. Off by default (keeps non-macOS / CI builds buildable);
# `src-tauri` turns it on for the macOS target.
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]

[dependencies]
anyhow = "1.0.102"
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokenizers = "0.23.1"
