[package]
name = "atlas-review"
version = "0.1.0"
edition = "2021"
description = "Native code-review engine for Atlas, built on the Cersei agent SDK."

[lib]
name = "atlas_review"

[dependencies]
# Cersei agent SDK (crates.io). Drives the tool-free review agent: provider
# builders, agentic loop, streaming events. Pinned to the published 0.1.9.
# default-features=false drops the `vms` feature (see atlas-cersei) — all cersei
# consumers must agree due to feature unification.
cersei = { version = "0.2.6", default-features = false }
# CancellationToken for cooperative cancel of an in-flight review. Same TLS /
# tokio stack as the host app, so the dependency trees unify.
tokio-util = "0.7"
# Bounded-concurrency fan-out (buffer_unordered) for per-file review agents.
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
